# promptml

./: .gitignore  Cargo.toml  LICENSE  README.md  promptengine.pyi  pyproject.toml  stub.py
.github/workflows/: ci.yml
examples/: example.py
python/prompml/: template.py
python/promptengine/: __init__.py  promptengine.pyi  template.py
python/promptml/: __init__.py  __init__.pyi  promptml.pyi  template.py
src/: fragment.rs  lib.rs  parser.rs  template.rs
