[package]
name = "promptml"
version = "0.3.1"
edition = "2021"
license = "AGPL-3.0"
authors = ["ylfeng <ylfeng@ir.hit.edu.cn>"]
description = "A Parser for Prompt Markup Language."
homepage = "https://github.com/AlongWY/PromptML"
repository = "https://github.com/AlongWY/PromptML"
keywords = ["prompt"]
exclude = [".github"]

[lib]
name = "promptml"
crate-type = ["cdylib"]

[dependencies]
nom = { version = "7" }
itertools = { version = "0.10" }
pyo3 = { version = "0.16", features = ["extension-module"] }

[package.metadata.maturin]
python-source = "python"