[project]
name = "promptml"
classifiers = [
    'Development Status :: 1 - Planning',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    "Programming Language :: Python",
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Libraries'
]

dependencies = [
    "datasets",
    "transformers",
]

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"